--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/dashboard/dashboard.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/dashboard/dashboard.html
@@ -7,7 +7,7 @@
         <table class="table">
             <thead>
             <tr>
-                <th>Issue</th>
+                <th>Issues</th>
                 <th>Description</th>
                 <th>Due Date</th>
             </tr>
@@ -27,7 +27,7 @@
         </uib-pagination>
     </div>
     <div class="col-md-12">
-        <h3>Project Leader</h3>
+        <h3>Assigned Projects as Leader</h3>
         <form name="projectLeaderForm">
             <div class="form-group">
                 <select ng-model="projectId" required="required" class="form-control">
