--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/dashboard/dashboard.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/dashboard/dashboard.html
@@ -15,7 +15,7 @@
             <tbody ng-repeat="issue in myIssues.Issues">
             <tr>
                 <td><a ng-href="#/issues/{{issue.Id}}">{{issue.Title}}</a>
-                    (<a ng-href="#/projects/{{issue.Project.Id}}" style="color: gray">{{issue.Project.Name}}</a>)</td>
+                    (<a ng-href="#/projects/{{issue.Project.Id}}" class="gray-info">{{issue.Project.Name}}</a>)</td>
                 <td>{{issue.Description}}</td>
                 <td>{{issue.DueDate | date}}</td>
             </tr>
@@ -36,7 +36,7 @@
                 </select>
             </div>
             <div class="form-group">
-                <a ng-href="#/projects/{{projectId}}" class="btn btn-default">See Project</a>
+                <button ng-click="projectLeaderProject(projectId)" ng-disabled="projectLeaderForm.$invalid" class="btn btn-default">See Project</button>
             </div>
         </form>
     </div>
@@ -54,7 +54,4 @@
             </div>
         </div>
     </div>
-</div>
-<div ng-if="bool" class="fade">
-    Fade me in out
 </div>
