--- a/Front-end/JS-frameworks/Project/Issue-tracking-system-app/account/register-login.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system-app/account/register-login.html
@@ -17,8 +17,8 @@
                                placeholder="Password" required="required">
                     </div>
                     <div class="form-group">
-                        <button class="btn btn-default" ng-click="login(loginData)"
-                                ng-disabled="loginForm.$invalid">Login
+                        <button class="btn btn-default" ng-click="login(loginData)" ng-disabled="loginForm.$invalid">
+                            Login
                         </button>
                     </div>
                 </form>
