--- a/Front-end/JS-frameworks/Project/Issue-tracking-system-app/projects/add-project.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system-app/projects/add-project.html
@@ -1,4 +1,4 @@
-<form ng-init="initAddProject()"  name="addProjectForm" ng-controller="DelayController" ng-hide="delay" class="form-horizontal delay">
+<form ng-init="initAddProject()" ng-controller="DelayController" ng-hide="delay" name="addProjectForm" class="form-horizontal delay">
     <div class="form-group">
         <div class="col-md-offset-1 col-md-11">
             <h3>Add Project</h3>
