--- a/Front-end/JS-frameworks/Project/Issue-tracking-system-app/projects/edit-project.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system-app/projects/edit-project.html
@@ -1,5 +1,5 @@
 <div ng-init="initEditProject()" ng-controller="DelayController" ng-hide="delay" class="delay">
-    <form name="editProjectForm" class="form-horizontal"  ng-if="isProjectLeader || isAdmin">
+    <form name="editProjectForm" class="form-horizontal">
         <div class="form-group">
             <div class="col-md-offset-2 col-md-9">
                 <h3>Edit Project</h3>
