add ng-cloak to index.html

--- a/Front-end/JS-frameworks/Project/Issue-tracking-system-app/dashboard/dashboard.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system-app/dashboard/dashboard.html
@@ -34,7 +34,9 @@
                 </select>
             </div>
             <div class="form-group">
-                <button ng-click="projectLeaderProject(projectId)" ng-disabled="projectLeaderForm.$invalid" class="btn btn-default">See Project</button>
+                <button ng-click="projectLeaderProject(projectId)" ng-disabled="projectLeaderForm.$invalid" class="btn btn-default">
+                    See Project
+                </button>
             </div>
         </form>
     </div>
