--- a/Front-end/JS-frameworks/Project/Issue-tracking-system-app/index.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system-app/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="lib/ng-tags-input/ng-tags-input.bootstrap.css">
     <link rel="stylesheet" href="styles/app.css">
 </head>
-<body>
+<body ng-cloak>
 <nav class="navbar navbar-inverse" ng-controller="NavbarController">
     <div class="container">
         <div class="navbar-header">
